# stacks-azure-fabric

./: .gitignore  .pre-commit-config.yaml  .terraform-version  Makefile  README.md  eirctl.yaml  pyproject.toml  stackscli.yml
.github/: dependabot.yml
build_de/: upload-to-onelake.yml  upload_to_onelake.yml  workload-post-deploy-testing.yml  workload-pre-deploy-testing.yml  workload-testing.yml
de_build/: de-workload-testing.yml
de_workloads/: README.md
de_workloads/example_copy_job/terraform/: date_pipeline.tf  pipeline_content.json.tmpl  vars.tf
de_workloads/ingest/example_copy_pipeline/: README.md
de_workloads/process/example_silver_to_gold/: README.md
deploy/terraform/: .terraform.lock.hcl  ado_variable_group.tf  automation.tf  capacity.tf  data.tf  environment.tf  fabric_capacity.tf  fabric_lakehouse.tf  lakehouse.tf  locals.tf  main.tf  outputs.tf  providers.tf  variables.tf  workspace_role_assignments.tf
deploy/terraform/infra/: .terraform.lock.hcl  automation.tf  data.tf  key-vault.tf  lakehouse.tf  locals.tf  main.tf  outputs.tf  providers.tf  resource_group.tf  variables.tf  workspace.tf  workspace_role_assignments.tf
deploy/terraform/workspace_variables/: prod_terraform.tfvars  test_terraform.tfvars  uat_terraform.tfvars
docs/: glossary.adoc  index.adoc  permissions.adoc
docs/conf/styles/: theme.yml
docs/cost_management/: _index.adoc  runbook_script.adoc  suspension.adoc  time_calculations.adoc
docs/data_extraction/: _index.adoc  data_gateway.adoc
docs/deployment/: _index.adoc  architecture.adoc  outputs.adoc  permissions.adoc  resource_tagging.adoc  terraform_variables.adoc
docs/enchancements/: _index.adoc  en_find_ad_user_id.adoc
docs/lib/: custom-title-page.rb  source-code-label.rb
docs/lib/generate-banner-image/: extension.rb
docs/prereqs/: _index.adoc  prereq_ado_variable_group.adoc  prereq_service_principal.adoc  prereq_tools.adoc  service_principal.adoc
docs/prereqs/tools/: docker_engine.adoc  eirctl.adoc  git.adoc  ide.adoc
docs/quickstart/: _index.adoc  clone_repo.adoc  deployment.adoc  setting_env_vars.adoc
docs/snippets/: env_var_script.adoc  toollist.adoc
docs/troubleshooting/: _index.adoc  capacity_guid.adoc  create_operation.adoc  ts_capacity_admins.adoc  ts_capacity_guid.adoc  ts_create_operation.adoc  ts_fabric_admin_email.adoc  ts_terraform_replace.adoc
fabric_content/: .flake8  README.md  pyproject.toml
fabric_content/data_engineering/: README.md
fabric_content/data_engineering/example_copy_pipeline/: README.md
fabric_content/data_engineering/example_copy_pipeline/ado/: pipeline.yml
fabric_content/data_engineering/example_copy_pipeline/definition/: pipeline_content.json.tmpl
fabric_content/data_engineering/example_copy_pipeline/terraform/: constraints.tf  data_pipeline.tf  providers.tf  variables.tf  vars.tf
fabric_content/data_engineering/example_spark_pipeline/: README.md
fabric_content/data_engineering/example_spark_pipeline/ado/: pipeline.yml
fabric_content/data_engineering/example_spark_pipeline/definition/: example_spark_job_definition.json.tmpl  example_spark_pipeline.json.tmpl
fabric_content/data_engineering/example_spark_pipeline/spark_job/: example_spark_job.py
fabric_content/data_engineering/example_spark_pipeline/spark_job/test/: test_example_spark_job.py
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/component/features/: example_spark_job.feature  transform_and_save.feature
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/component/steps/: test_example_spark_job.py  test_transform_and_save.py
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/component/test_data/input/: source_table.csv
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/component/test_data/output/: expected_table.csv
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/end_to_end/: conftest.py  fabric_helper.py
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/end_to_end/features/: transform_and_save.feature
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/end_to_end/steps/: test_example_spark_job.py  test_transform_and_save.py
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/test_data/: expected_table.csv  source_table.csv
fabric_content/data_engineering/example_spark_pipeline/spark_job/tests/unit/: test_example_spark_job.py  test_transform_and_save.feature  test_transform_and_save_integration.py
fabric_content/data_engineering/example_spark_pipeline/terraform/: .terraform.lock.hcl  data_pipeline.tf  providers.tf  variables.tf  vars.tf
(+27 files in other folders)
