[project]
name = "stacks-azure-fabric"
version = "0.1.0"
description = "A toolkit to accelerate the deployment of a Microsoft Fabric data platform, integrating infrastructure-as-code and automated content deployment."
authors = [
    {name = "Ensono Stacks",email = "stacks@ensono.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"

dependencies = [
    "pyspark (>=3.5.5,<4.0.0)",
    "colorlog (>=6.9.0,<7.0.0)"
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
azure-identity = "^1.23.0"
delta-spark = "^3.3.1"
deltalake = "^0.25.5"
