[project]
name = "stacks-azure-fabric"
version = "0.1.0"
description = "Ensono Stacks Fabric provides a solution to accelerate the deployment of an Azure Fabric Data Platform"
authors = [
    {name = "Ensono Stacks",email = "stacks@ensono.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pre-commit (>=4.2.0,<5.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "flake8 (>=7.2.0,<8.0.0)",
    "pydocstyle (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"

[tool.black]
line_length = 120
target_version = ["py312"]
exclude = '''
/(
    \\.git
  | \\.venv
)/
'''

[tool.flake8]
max_line_length = 120
exclude = ".venv,.git"

[tool.pydocstyle]
convention = "google"
add_ignore = "D100,D101,D104"
match = "(?!test_|conftest).*\\.py"
match_dir = "^(?!(tests)).*"
