[project]
name = "stacks-azure-fabric"
version = "0.1.0"
description = "A toolkit to accelerate the deployment of a Microsoft Fabric data platform, integrating infrastructure-as-code and automated content deployment."
authors = [
    {name = "Ensono Stacks",email = "stacks@ensono.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = []

[tool.poetry]
package-mode = false


[tool.poetry.group.dev.dependencies]
azure-identity = "^1.23.0"
delta-spark = "^3.3.1"
deltalake = "^0.25.5"
pytest = "^8.3.5"
pytest-mock = ">=3.14.1,<4.0.0"
pytest-bdd = "^7.1.2"
pandas = "^2.2.2"
pyspark = "^3.5.1"
setuptools = "^70.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
